ref/tel/test/pos/schema-with-layer-types.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name base-schema

record address
  field street string

document
  field home address

layer
  name with-secondary
  record backup-address
    field place string
  overlay
    field secondary backup-address
